Added test for double slashes in the beginning of the URL